# Agentes_DataH

./: .env.sample  .gitignore  Aula_Agentes_DataH_2025.ipynb  README.md  pyproject.toml
documentos/: README.txt  leitura_ultimos_5d_amostra.csv
src/: configuracao.py  exemplo_01.py  exemplo_01_1.py  exemplo_02.py  exemplo_02_1.py  exemplo_03.py  exemplo_04.py  exemplo_05.py  exemplo_06.py  exemplo_07.py  exemplo_08.py  exemplo_09.py  exemplo_10.py  exemplo_11.py  exemplo_12.py  exemplo_13.py  exemplo_14.py  llms.py  mcp_client.py  mcp_helpers.py  mcp_server.py
