[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.16",
    "fastmcp>=2.2.6",
    "google-generativeai>=0.8.5",
    "grandalf>=0.8",
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.7",
    "langchain-mcp-adapters==0.0.9",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.4",
    "matplotlib>=3.10.5",
    "numexpr>=2.11.0",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydot>=4.0.1",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
]
